<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/language_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:text="@string/languages"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/turkishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/language_settings"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:text="@string/turkish"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_bright"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/englishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/language_settings"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/turkishButton"
        android:background="@android:color/transparent"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/language_settings"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />
</RelativeLayout>