<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:text="@string/are_you_sure_you_want_to_get_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textWarning"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_bright"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textWarning"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />
</RelativeLayout>